# i2GroupNodeScoring

./: CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  Solution.md  vcpkg-configuration.json  vcpkg.json
include/i2/: directives.hpp  io.hpp  node.hpp  nodeLoader.hpp
resources/: data.json  invalidNodeIndex.json  nodeSelfReference.json
source/: main.cpp
source/i2/: io.cpp  node.cpp  nodeLoader.cpp
tests/: nodeLinkingTest.cpp
